# xrizer

./: .gitattributes  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yml  ubuntu.dockerfile
fakexr/: Cargo.toml  README.md
fakexr/src/: lib.rs  vulkan.rs
macros/: Cargo.toml
macros/src/: lib.rs
openvr/: Cargo.toml  build.rs
openvr/src/: convert.rs  lib.rs
shaders/: Cargo.toml
shaders/src/: lib.rs  overlay.frag  overlay.vert
src/: applications.rs  chaperone.rs  clientcore.rs  compositor.rs  convert.rs  error_dialog.rs  graphics_backends.rs  input.rs  lib.rs  misc_unknown.rs  openxr_data.rs  overlay.rs  overlayview.rs  rendermodels.rs  screenshots.rs  settings.rs  system.rs  vulkan.rs
src/graphics_backends/: gl.rs  vulkan.rs
src/input/: action_manifest.rs  action_manifest_helpers.rs  custom_bindings.rs  knuckles.rs  legacy.rs  mod.rs  oculus_touch.rs  profiles.rs  simple_controller.rs  skeletal.rs  skeletal_generated.rs  tests.rs  vive_controller.rs
src/input/action_manifest/: helpers.rs
src/input/profiles/: knuckles.rs  oculus_touch.rs  simple_controller.rs  vive_controller.rs
tests/: tests.rs
tests/input_data/: actions.json  actions_cased.json  actions_dpad.json  actions_dpad_mixed.json  actions_dpad_multi.json  actions_malformed_paths.json  actions_missing_sets.json  actions_toggle.json  knuckles.json  knuckles_dpad_thumbstick.json  knuckles_no_dpad.json  knuckles_toggle.json  oculus.json  wands.json  wands_cased.json  wands_dpad.json
xbuild/: Cargo.toml  README.md
xbuild/src/: main.rs
