[package]
name = "xrizer"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["xbuild"]

[workspace.dependencies]
ash = "0.38.0"
openxr = { git = "https://github.com/ralith/openxrs", rev = "d0afdd3", version = "0.19.0", features = ["static"] }
openxr-sys = { git = "https://github.com/ralith/openxrs", rev = "d0afdd3", version = "0.11.0" }
slotmap = "1.0.7"
glam = "0.29.0"

[dependencies]
arc-swap = "1.7.1"
ash = { workspace = true }
env_logger = "0.11.5"
glam = { workspace = true }
log = "0.4.22"
openxr = { workspace = true }
paste = "1.0.15"
seq-macro = "0.3.5"
macros = { path = "macros" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
slotmap = { workspace = true }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.51"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
regex = "1.10.5"
syn = { version = "2.0.71", features = ["full"] }

[dev-dependencies]
libloading = "0.8.5"
test-cdylib = "1.1.0"
fakexr = { path = "fakexr" }
