[package]
name = "xrizer"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["openvr", "shaders", "xbuild"]

[workspace.dependencies]
ash = "0.38.0"
openxr = { git = "https://github.com/ralith/openxrs", rev = "d0afdd3", version = "0.19.0", features = ["static"] }
openxr-sys = { git = "https://github.com/ralith/openxrs", rev = "d0afdd3", version = "0.11.0" }
slotmap = "1.0.7"
glam = "0.29.0"
log = "0.4.22"

[dependencies]
ash = { workspace = true }
env_logger = "0.11.5"
glam = { workspace = true }
log = { workspace = true }
openxr = { workspace = true }
openvr = { path = "openvr" }
paste = "1.0.15"
seq-macro = "0.3.5"
macros = { path = "macros" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
slotmap = { workspace = true }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }

[build-dependencies]
shaders = { path = "shaders" }

[dev-dependencies]
libloading = "0.8.5"
test-cdylib = "1.1.0"
fakexr = { path = "fakexr" }
