[package]
name = "openvr"
version = "0.1.0"
edition = "2021"

[features]
tracing = ["dep:tracy-client"]

[dependencies]
log = { workspace = true }
openxr = { workspace = true }
glam = { workspace = true }
tracy-client = { workspace = true, optional = true }

[build-dependencies]
bindgen = "0.69.4"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
regex = "1.10.5"
syn = { version = "2.0.71", features = ["full"] }
